# vstd-lab-work-2

./: CMakeLists.txt  README.MD  README.md  lab2Config.h.in
include/: task1.h  task2.h  task3.h  task3i.h  task4.h  task4i.h  task5.h
src/: CMakeLists.txt
src/task1/: CMakeLists.txt  main.cpp
src/task2/: CMakeLists.txt  main.cpp
src/task3/: CMakeLists.txt  main.cpp  task3.cpp
src/task3i/: CMakeLists.txt  main.cpp  task3i.cpp
src/task4/: CMakeLists.txt  main.cpp  task4.cpp
src/task4i/: CMakeLists.txt  main.cpp  task4i.cpp
src/task5/: CMakeLists.txt  main.cpp  task5.cpp
